--- a/src/_grids.scss
+++ b/src/_grids.scss
@@ -3,9 +3,11 @@ main {
     .logos,
     .websites {
       display: grid;
-      grid-template-columns: 70% 30%;
+      grid-template-columns: 60% 40%;
       grid-template-rows: auto;
       grid-template-areas: "left right";
+      gap: 2rem;
+
       .section-img {
         grid-area: right;
       }
@@ -16,9 +18,11 @@ main {
 
     .animations {
       display: grid;
-      grid-template-columns: 30% 70%;
+      grid-template-columns: 40% 60%;
       grid-template-rows: auto;
       grid-template-areas: "left right";
+      gap: 2rem;
+
       .section-img {
         grid-area: left;
       }
@@ -31,9 +35,11 @@ main {
     .logos,
     .websites {
       display: grid;
-      grid-template-columns: 70% 30%;
+      grid-template-columns: 60% 40%;
       grid-template-rows: auto;
       grid-template-areas: "left right";
+      gap: 2rem;
+
       .section-img {
         grid-area: right;
       }
@@ -44,9 +50,10 @@ main {
 
     .animations {
       display: grid;
-      grid-template-columns: 30% 70%;
+      grid-template-columns: 40% 60%;
       grid-template-rows: auto;
       grid-template-areas: "left right";
+      gap: 2rem;
       .section-img {
         grid-area: left;
       }
