layout and css done
now i only need to fillit with content

--- a/css/index.css
+++ b/css/index.css
@@ -70,6 +70,16 @@ h1,
 h2 {
   font-weight: 900;
 }
+h1 br,
+h2 br {
+  display: none;
+}
+@media (min-width: 992px) {
+  h1 br,
+  h2 br {
+    display: block;
+  }
+}
 
 ul {
   color: inherit;
@@ -96,8 +106,10 @@ header {
   position: relative;
 }
 header nav {
+  z-index: 1;
   background: #3240b3;
   width: 100vw;
+  position: fixed;
 }
 @media (min-width: 992px) {
   header nav {
@@ -147,6 +159,7 @@ header section {
 @media (min-width: 768px) {
   header section {
     flex-direction: column;
+    justify-content: flex-start;
   }
 }
 @media (min-width: 992px) {
@@ -173,20 +186,40 @@ header section .header-img {
 @media (min-width: 768px) {
   header section .header-img {
     margin: 0;
+    padding: 0%;
     display: block;
     object-fit: cover;
     min-width: 30%;
-    max-width: 65%;
-    margin-left: 1rem;
+    max-width: 100%;
     height: auto;
   }
 }
 @media (min-width: 992px) {
+  header section .header-img {
+    border-radius: 0.5rem;
+  }
+}
+@media (min-width: 768px) {
   header .header-text {
-    width: 40%;
+    padding-top: 25%;
+    padding-bottom: 15%;
+  }
+}
+@media (min-width: 992px) {
+  header .header-text {
+    padding-top: 20%;
+    min-width: 40%;
+    max-width: 45%;
     margin: 0 auto;
-    padding: 0 1rem;
-    padding-top: 15%;
+  }
+  header .header-text h1 {
+    font-size: 2em;
+  }
+  header .header-text h6 {
+    font-size: 0.9em;
+  }
+  header .header-text .button a {
+    font-size: 0.9em;
   }
 }
 @media (min-width: 992px) {
@@ -206,7 +239,7 @@ main section {
 }
 @media (min-width: 768px) {
   main section {
-    width: 70%;
+    width: 75%;
     padding-top: 6rem;
     text-align: start;
   }
@@ -214,12 +247,34 @@ main section {
 @media (min-width: 992px) {
   main section {
     padding-top: 10%;
-    width: 60%;
+    width: 70%;
   }
 }
 main section .section-img {
-  width: fit-content;
-  margin: 0 auto;
+  width: 100%;
+}
+main section .section-img img {
+  border-radius: 0.5rem;
+  margin-bottom: 1rem;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+@media (min-width: 768px) {
+  main section .section-img img {
+    margin-bottom: 0;
+  }
+}
+@media (min-width: 992px) {
+  main section .section-img img {
+    width: 80%;
+    float: right;
+  }
+}
+@media (min-width: 992px) {
+  main section .animations .section-img img {
+    float: left;
+  }
 }
 main section .button a {
   background: #3240b3;
@@ -233,12 +288,64 @@ main section .list-row {
     justify-content: flex-start;
   }
 }
-main section img {
-  margin-bottom: 1.5rem;
+main #service {
+  padding-top: 7rem;
+}
+@media (min-width: 768px) {
+  main #service {
+    padding-top: 13rem;
+  }
+}
+main #about-me .section-img {
+  width: 80%;
+  margin: auto;
+}
+@media (min-width: 768px) {
+  main #about-me .section-img {
+    width: 30%;
+  }
 }
 @media (min-width: 992px) {
+  main #about-me .section-img {
+    width: 100%;
+    margin: auto;
+  }
+  main #about-me .section-img img {
+    float: none;
+    margin: auto;
+    width: 100%;
+  }
+}
+main #about-me .section-img img {
+  border-radius: 100%;
+}
+@media (min-width: 992px) {
+  main #about-me .section-img img {
+    border-radius: 0.5rem;
+  }
+}
+@media (min-width: 768px) {
   main #about-me {
-    width: 40%;
+    padding-top: 9rem;
+    padding-bottom: 3rem;
+  }
+  main #about-me h3 {
+    text-align: center;
+  }
+}
+@media (min-width: 768px) and (min-width: 992px) {
+  main #about-me h3 {
+    text-align: start;
+  }
+}
+@media (min-width: 768px) {
+  main #about-me h6 ul {
+    justify-content: center;
+  }
+}
+@media (min-width: 768px) and (min-width: 992px) {
+  main #about-me h6 ul {
+    justify-content: flex-start;
   }
 }
 main #about-me h3 {
@@ -255,6 +362,21 @@ main #about-me p {
 main #about-me article {
   padding-bottom: 3rem;
 }
+@media (min-width: 768px) {
+  main #about-me .contact {
+    display: flex;
+    align-items: start;
+    justify-content: center;
+  }
+  main #about-me .contact .button {
+    margin: 0;
+    margin-right: 1rem;
+  }
+  main #about-me .contact p {
+    margin: 0;
+    padding: 0;
+  }
+}
 @media (min-width: 992px) {
   main #about-me .contact {
     display: flex;
@@ -268,16 +390,6 @@ main #about-me article {
     padding: 0;
     margin: 0 1rem;
   }
-}
-main #about-me .section-img {
-  width: fit-content;
-}
-main #about-me .section-img img {
-  max-width: 40%;
-}
-main .section-img img {
-  object-fit: cover;
-  max-width: 70%;
 }
 
 footer {
@@ -301,62 +413,98 @@ footer div p {
 @media (min-width: 768px) {
   main .logos,
   main .websites {
+    margin: auto;
     display: grid;
-    grid-template-columns: 60% 40%;
+    grid-template-columns: 40% 45%;
     grid-template-rows: auto;
     grid-template-areas: "left right";
     gap: 2rem;
   }
   main .logos .section-img,
   main .websites .section-img {
+    transform: translateY(-2rem);
     grid-area: left;
   }
   main .logos .section-text,
   main .websites .section-text {
     grid-area: right;
+    margin: auto;
   }
   main .animations {
     display: grid;
-    grid-template-columns: 40% 60%;
+    grid-template-columns: 45% 40%;
     grid-template-rows: auto;
     grid-template-areas: "left right";
     gap: 2rem;
+    margin: auto;
   }
   main .animations .section-img {
+    transform: translateY(-2rem);
     grid-area: right;
   }
   main .animations .section-text {
     grid-area: left;
+    margin: auto;
   }
 }
 @media (min-width: 992px) {
   main .logos,
   main .websites {
     display: grid;
-    grid-template-columns: 60% 40%;
+    grid-template-columns: 40% 45%;
     grid-template-rows: auto;
     grid-template-areas: "left right";
     gap: 2rem;
   }
   main .logos .section-img,
   main .websites .section-img {
+    transform: translateY(-2rem);
     grid-area: left;
   }
   main .logos .section-text,
   main .websites .section-text {
     grid-area: right;
+    margin: auto;
   }
   main .animations {
     display: grid;
-    grid-template-columns: 40% 60%;
+    grid-template-columns: 45% 40%;
     grid-template-rows: auto;
     grid-template-areas: "left right";
     gap: 2rem;
   }
   main .animations .section-img {
+    transform: translateY(-2rem);
     grid-area: right;
   }
   main .animations .section-text {
     grid-area: left;
+    margin: auto;
+  }
+}
+
+@media (min-width: 992px) {
+  #about-me div:first-child {
+    width: 70%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: auto 40%;
+    grid-template-rows: auto;
+    grid-template-areas: "left right" "bottom bottom";
+    gap: 2rem;
+  }
+  #about-me div:first-child .section-img {
+    grid-area: right;
+    display: block;
+  }
+  #about-me div:first-child .info-me {
+    grid-area: left;
+  }
+  #about-me div:first-child .contact {
+    grid-area: bottom;
+  }
+  #about-me .contact .button {
+    display: inline;
+    width: fit-content;
   }
 }
