--- a/src/_header.scss
+++ b/src/_header.scss
@@ -9,11 +9,12 @@ header {
   overflow: hidden;
   position: relative;
   nav {
+    z-index: 1;
     background: $primaryColor;
     width: 100vw;
+    position: fixed;
     @include desktops {
       background: linear-gradient($primaryColor, hsl(245deg 56% 40%));
-      
     }
     ul {
       justify-content: space-evenly;
@@ -53,6 +54,7 @@ header {
     align-items: center;
     @include tablets {
       flex-direction: column;
+      justify-content: flex-start;
     }
     @include desktops {
       flex-direction: row;
@@ -79,21 +81,40 @@ header {
       display: none;
       @include tablets {
         margin: 0;
+        padding: 0%;
         display: block;
         object-fit: cover;
         min-width: 30%;
-        max-width: 65%;
-        margin-left: 1rem;
+        max-width: 100%;
         height: auto;
+      }
+      @include desktops {
+        border-radius: 0.5rem;
       }
     }
   }
   .header-text {
+    @include tablets {
+      padding-top: 25%;
+      padding-bottom: 15%;
+    }
     @include desktops {
-      width: 40%;
+      padding-top: 20%;
+      min-width: 40%;
+
+      max-width: 45%;
       margin: 0 auto;
-      padding: 0 1rem;
-      padding-top: 15%;
+      h1 {
+        font-size: 2em;
+      }
+      h6 {
+        font-size: 0.9em;
+      }
+      .button {
+        a {
+          font-size: 0.9em;
+        }
+      }
     }
   }
 
