--- a/src/_base.scss
+++ b/src/_base.scss
@@ -26,6 +26,12 @@ h6 {
 h1,
 h2 {
   font-weight: 900;
+  br {
+    display: none;
+    @include desktops {
+      display: block;
+    }
+  }
 }
 
 ul {
