--- a/src/_main.scss
+++ b/src/_main.scss
@@ -41,6 +41,19 @@ main {
           }
         }
       }
+      .video-responsive {
+        overflow: hidden;
+        padding-bottom: 56.25%;
+        position: relative;
+        height: 0;
+      }
+      .video-responsive iframe {
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+      }
     }
 
     .button {
@@ -79,7 +92,7 @@ main {
           width: 100%;
         }
       }
-      
+
       img {
         border-radius: 100%;
         @include desktops {
