--- a/src/_grids.scss
+++ b/src/_grids.scss
@@ -1,107 +1,68 @@
 main {
   @include tablets {
     .logos,
-    .websites {
-      margin: auto;
+    .websites,
+    .animations {
+      float: left;
       display: grid;
-      grid-template-columns: 40% 45%;
+      grid-template-columns: 65% 35%;
       grid-template-rows: auto;
       grid-template-areas: "left right";
-      gap: 2rem;
+      padding-bottom: 15rem;
 
       .section-img {
-        transform: translateY(-2rem);
         grid-area: left;
       }
       .section-text {
         grid-area: right;
         margin: auto;
+        padding-left: 4rem;
+        padding-right: 6rem;
       }
     }
 
     .animations {
-      display: grid;
-      grid-template-columns: 45% 40%;
-      grid-template-rows: auto;
-      grid-template-areas: "left right";
-      gap: 2rem;
-      margin: auto;
-
+      float: right;
+      grid-template-columns: 35% 65%;
       .section-img {
-        transform: translateY(-2rem);
         grid-area: right;
       }
       .section-text {
         grid-area: left;
-
+        padding-right: 4rem;
+        padding-left: 6rem;
         margin: auto;
       }
     }
   }
-  @include desktops {
-    .logos,
-    .websites {
-      display: grid;
-      grid-template-columns: 40% 45%;
-      grid-template-rows: auto;
-      grid-template-areas: "left right";
-      gap: 4rem;
 
-      .section-img {
-        transform: translateY(-2rem);
-        grid-area: left;
-      }
-      .section-text {
-        grid-area: right;
+  // about me grid
+  #about-me {
+    @include desktops {
+      div:first-child {
+        width: 70%;
         margin: auto;
-      }
-    }
-
-    .animations {
-      display: grid;
-      grid-template-columns: 45% 40%;
-      grid-template-rows: auto;
-      grid-template-areas: "left right";
-      gap: 4rem;
-      .section-img {
-        transform: translateY(-2rem);
-        grid-area: right;
-      }
-      .section-text {
-        grid-area: left;
-
-        margin: auto;
-      }
-    }
-  }
-}
-
-// about me grid
-#about-me {
-  @include desktops {
-    div:first-child {
-      width: 70%;
-      margin: auto;
-      display: grid;
-      grid-template-columns: auto 40%;
-      grid-template-rows: auto;
-      grid-template-areas: "left right" "bottom bottom";
-      gap: 2rem;
-      .section-img {
-        grid-area: right;
-        display: block;
-      }
-      .info-me {
-        grid-area: left;
+        display: grid;
+        grid-template-columns: auto 40%;
+        grid-template-rows: auto;
+        grid-template-areas: "left right" "bottom bottom";
+        gap: 2rem;
+        .section-img {
+          grid-area: right;
+          display: block;
+        }
+        .info-me {
+          grid-area: left;
+        }
+        .contact {
+          grid-area: bottom;
+        }
       }
       .contact {
-        grid-area: bottom;
-      }
-    }
-    .contact {
-      .button {
-        display: inline;
-        width: fit-content;
+        .button {
+          display: inline;
+          width: fit-content;
+        }
       }
     }
   }
