--- a/src/_header.scss
+++ b/src/_header.scss
@@ -55,6 +55,7 @@ header {
     @include tablets {
       flex-direction: column;
       justify-content: flex-start;
+      position: relative;
     }
     @include desktops {
       flex-direction: row;
@@ -63,7 +64,6 @@ header {
     }
 
     div {
-      margin: 1rem;
       h1 {
         @include desktops {
           margin: 0 2rem;
@@ -90,10 +90,9 @@ header {
     }
 
     .headerimage-div {
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      width: 100%;
       position: relative;
+      z-index: -1;
     }
     .header-img {
       display: none;
@@ -102,7 +101,7 @@ header {
         padding: 0%;
         display: block;
         object-fit: cover;
-        max-width: 1280 px;
+        max-width: 100vw;
         min-width: 500 px;
         width: 100%;
 
@@ -112,15 +111,14 @@ header {
   }
   .header-text {
     @include tablets {
-      padding-top: 25%;
-      padding-bottom: 15%;
+      position: absolute;
+      background-color: $backgroundColorTop;
+      padding: 20rem 0;
+      padding-left: 15rem;
+      padding-right: 10rem;
+      border-radius: 0 50% 50% 0;
     }
     @include desktops {
-      padding-top: 20%;
-      min-width: 40%;
-
-      max-width: 45%;
-      margin: 0 auto;
       h1 {
         font-size: 2em;
         span {
@@ -141,18 +139,5 @@ header {
   @include desktops {
     color: $textColor;
     background: none;
-
-    .mask {
-      clip-path: url("#myClip");
-      position: absolute;
-      .circle {
-        position: absolute;
-        fill: blue;
-      }
-      .rect {
-        position: absolute;
-        fill: red;
-      }
-    }
   }
 }
