--- a/src/_main.scss
+++ b/src/_main.scss
@@ -2,6 +2,10 @@
 
 main {
   text-align: center;
+  // .circle-mask{
+  //   background-color: blue;
+  //   padding: 10rem 0;
+  // }
 
   section {
     padding-top: 3rem;
@@ -11,7 +15,9 @@ main {
       padding-top: 6rem;
       text-align: start;
     }
+
     .section-img {
+      position: relative;
       img {
         max-width: 100%;
         min-width: 100px;
@@ -22,6 +28,13 @@ main {
         object-fit: cover;
         border-radius: 0.5rem;
       }
+      .circle-mask{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        fill: $backgroundColorTop;
+      }
+      
     }
 
     .animations {
