--- a/css/index.css
+++ b/css/index.css
@@ -188,24 +188,25 @@ header section .header-img {
 }
 @media (min-width: 768px) {
   header section .header-img {
-    margin: 0;
     padding: 0%;
     display: block;
     object-fit: cover;
-    max-width: 100vw;
+    max-width: 1280px;
     min-width: 500 px;
     width: 100%;
+    margin-right: 0;
+    margin-left: auto;
     height: auto;
   }
 }
 @media (min-width: 768px) {
   header .header-text {
-    position: absolute;
-    background-color: hsl(43, 6%, 89%);
-    padding: 20rem 0;
-    padding-left: 15rem;
-    padding-right: 10rem;
-    border-radius: 0 50% 50% 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10rem;
+    padding-top: 15%;
   }
 }
 @media (min-width: 992px) {
@@ -242,9 +243,6 @@ main section {
     text-align: start;
   }
 }
-main section .section-img {
-  position: relative;
-}
 main section .section-img img {
   max-width: 100%;
   min-width: 100px;
@@ -254,12 +252,6 @@ main section .section-img img {
   max-height: 600px;
   object-fit: cover;
   border-radius: 0.5rem;
-}
-main section .section-img .circle-mask {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  fill: hsl(43, 6%, 89%);
 }
 main section .animations .section-img img {
   max-width: 100%;
@@ -431,6 +423,8 @@ footer div p {
   main .animations .section-text {
     grid-area: right;
     margin: auto;
+    padding-left: 4rem;
+    padding-right: 6rem;
   }
   main .animations {
     float: right;
@@ -441,6 +435,8 @@ footer div p {
   }
   main .animations .section-text {
     grid-area: left;
+    padding-right: 4rem;
+    padding-left: 6rem;
     margin: auto;
   }
 }
@@ -468,4 +464,10 @@ footer div p {
     display: inline;
     width: fit-content;
   }
+}
+
+body {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
